@@ -1,64 +1,48 @@
 package io.kestra.plugin.jira.issues;
 
-import java.io.IOException;
-import java.net.URISyntaxException;
-import java.util.Objects;
-import java.util.concurrent.TimeoutException;
-
-import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
-import com.google.common.collect.ImmutableMap;
+import com.github.tomakehurst.wiremock.junit5.WireMockRuntimeInfo;
+import com.github.tomakehurst.wiremock.junit5.WireMockTest;
 
 import io.kestra.core.junit.annotations.KestraTest;
-import io.kestra.core.models.executions.Execution;
-import io.kestra.core.queues.QueueException;
-import io.kestra.core.repositories.LocalFlowRepositoryLoader;
-import io.kestra.core.runners.TestRunner;
-import io.kestra.core.runners.TestRunnerUtils;
-import io.kestra.core.tenant.TenantService;
+import io.kestra.core.models.property.Property;
+import io.kestra.core.runners.RunContext;
+import io.kestra.core.runners.RunContextFactory;
 
-import io.micronaut.context.ApplicationContext;
-import io.micronaut.runtime.server.EmbeddedServer;
 import jakarta.inject.Inject;
 
-import static org.hamcrest.MatcherAssert.assertThat;
-import static org.hamcrest.Matchers.hasSize;
+import java.util.Map;
+
+import static com.github.tomakehurst.wiremock.client.WireMock.*;
 
 @KestraTest
+@WireMockTest(httpPort = 5083)
 class CreateCommentTest {
 
     @Inject
-    private ApplicationContext applicationContext;
-
-    @Inject
-    protected TestRunner runner;
-
-    @Inject
-    protected TestRunnerUtils runnerUtils;
-
-    @Inject
-    protected LocalFlowRepositoryLoader repositoryLoader;
-
-    @BeforeEach
-    void init() throws IOException, URISyntaxException {
-        repositoryLoader.load(Objects.requireNonNull(CreateCommentTest.class.getClassLoader().getResource("flows")));
-        this.runner.run();
-    }
+    private RunContextFactory runContextFactory;
 
     @Test
-    void flow() throws TimeoutException, QueueException {
-        EmbeddedServer embeddedServer = applicationContext.getBean(EmbeddedServer.class);
-        embeddedServer.start();
+    void run(WireMockRuntimeInfo wireMockRuntimeInfo) throws Exception {
+        stubFor(any(urlPathMatching("/rest/api/2/issue/[^/]+/comment"))
+            .willReturn(okJson("{\"id\":\"12345\",\"body\":\"Test comment\"}")));
 
-        Execution execution = runnerUtils.runOne(
-            TenantService.MAIN_TENANT,
-            "io.kestra.tests",
-            "comment-jira",
-            null,
-            (f, e) -> ImmutableMap.of("url", embeddedServer.getURI().toString())
-        );
+        RunContext runContext = runContextFactory.of(Map.of());
 
-        assertThat(execution.getTaskRunList(), hasSize(3));
+        CreateComment task = CreateComment.builder()
+            .baseUrl(wireMockRuntimeInfo.getHttpBaseUrl())
+            .username(Property.ofValue("test@test.com"))
+            .password(Property.ofValue("api-token"))
+            .projectKey("TEST")
+            .issueIdOrKey("TEST-123")
+            .body("Test comment body")
+            .build();
+
+        task.run(runContext);
+
+        verify(postRequestedFor(urlPathMatching("/rest/api/2/issue/[^/]+/comment"))
+            .withHeader("Content-Type", equalTo("application/json"))
+            .withHeader("Authorization", matching("Basic .+")));
     }
 }
